New views New inserts New controllers

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -118,6 +118,10 @@ table {
 table thead {
     background: lightsteelblue;
 }
+table tbody tr th{
+    background: lightsteelblue;
+
+}
 
 table td {
     padding: 0.25em;
