--- a/src/main/resources/templates/fragments/usuarios/listagem.html
+++ b/src/main/resources/templates/fragments/usuarios/listagem.html
@@ -1,7 +1,7 @@
 <html th:replace="~{index :: layout (~{:: main})}">
 <body>
 <main th:fragment="content">
-  <h1>Usuários Inseridos</h1>
+  <h1>Usuários</h1>
   <table>
     <thead>
     <tr>
