--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Barra Lateral e Conteúdo Dinâmico</title>
+  <title>Folha Fácil</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -60,6 +60,78 @@
           </li>
           <li>
             <a href="/usuarios/criar">Criar</a>
+          </li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>Salários</summary>
+        <ul>
+          <li>
+            <a href="/salários/">Listar</a>
+          </li>
+          <li>
+            <a href="/salários/criar">Criar</a>
+          </li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>Benefícios</summary>
+        <ul>
+          <li>
+            <a href="/beneficios/">Listar</a>
+          </li>
+          <li>
+            <a href="/beneficios/criar">Criar</a>
+          </li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>Encargos</summary>
+        <ul>
+          <li>
+            <a href="/encargos/">Listar</a>
+          </li>
+          <li>
+            <a href="/encargos/criar">Criar</a>
+          </li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>Registro de Ponto</summary>
+        <ul>
+          <li>
+            <a href="/pontos/">Listar</a>
+          </li>
+          <li>
+            <a href="/pontos/criar">Criar</a>
+          </li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>Jornadas</summary>
+        <ul>
+          <li>
+            <a href="/jornadas/">Listar</a>
+          </li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>Holerites</summary>
+        <ul>
+          <li>
+            <a href="/Holerites/">Listar</a>
           </li>
         </ul>
       </details>
