--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,10 +69,10 @@
         <summary>Salários</summary>
         <ul>
           <li>
-            <a href="/salários/">Listar</a>
+            <a href="/salarios/">Listar</a>
           </li>
           <li>
-            <a href="/salários/criar">Criar</a>
+            <a href="/salarios/criar">Criar</a>
           </li>
         </ul>
       </details>
