--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -139,8 +139,10 @@
   </ul>
 </aside>
 
-<main th:insert="${content}">
+<main th:replace="${content}">
+
 </main>
 <script src="/js/app.js"></script>
+
 </body>
 </html>
