--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -89,6 +89,12 @@ form label {
     width: 100%;
 }
 
+form .select-label {
+    display: flex;
+    gap: 0.5em;
+    width: 100%;
+}
+
 form .row {
     display: flex;
     flex-direction: row;
@@ -118,7 +124,8 @@ table {
 table thead {
     background: lightsteelblue;
 }
-table tbody tr th{
+
+table tbody tr th {
     background: lightsteelblue;
 
 }
@@ -127,7 +134,7 @@ table td {
     padding: 0.25em;
     text-align: center;
     background-color: aliceblue;
-    
+
 }
 
 /* Dropdown Button */
@@ -153,13 +160,23 @@ table td {
     background-size: 18px;
     background-repeat: no-repeat;
     font-size: 16px;
-    padding: 14px 20px 12px 45px;
+    padding: 14px 65px 15px 45px;
     border: none;
     border-bottom: 1px solid #ddd;
 }
 
+.selected-list {
+    top: 30px;
+    bottom: 30px;
+    left: 400px;
+    right: 30px;
+    border-bottom: 1px solid #ddd;
+}
+
 /* The search field when it gets focus/clicked on */
-#myInput:focus {outline: 3px solid #ddd;}
+#myInput:focus {
+    outline: 3px solid #ddd;
+}
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -187,10 +204,14 @@ table td {
 
 
 /* Change color of dropdown links on hover */
-.dropdown-content li:hover {background-color: #f1f1f1}
+.dropdown-content li:hover {
+    background-color: #f1f1f1
+}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {
+    display: block;
+}
 
 
 
