--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -101,7 +101,9 @@ form .row {
     gap: 0.5em;
     width: 100%;
 }
-
+.row-element{
+    width: fit-content;
+}
 form button {
     width: max-content;
     align-self: center;
@@ -113,7 +115,7 @@ form label ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    color: crimson;
+    
 }
 
 table {
@@ -181,6 +183,7 @@ table td {
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
+    width: fit-content;
     display: inline-block;
 }
 
@@ -206,6 +209,10 @@ table td {
 /* Change color of dropdown links on hover */
 .dropdown-content li:hover {
     background-color: #f1f1f1
+}
+
+.default-span{
+    color: red;
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
